[package]
name = "casacore-tablebrowser-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Wire protocol for the casacore table browser session"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
