[package]
name = "casacore-tables"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
casacore-aipsio = { path = "../casacore-aipsio" }
casacore-types = { path = "../casacore-types" }
ndarray.workspace = true
num-complex.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
