[package]
name = "casacore-tables"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "casacore-compatible table data system in Rust"
repository.workspace = true

[lints]
workspace = true

[dependencies]
casacore-aipsio = { path = "../casacore-aipsio" }
casacore-tablebrowser-protocol = { path = "../casacore-tablebrowser-protocol" }
casacore-types = { path = "../casacore-types" }
logos = "0.15"
ndarray.workspace = true
regex = "1"
num-complex.workspace = true
serde_json = "1"
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
flate2 = "1"
tar = "0.4"
tempfile = "3"

[[example]]
name = "t_table_copy"

[[example]]
name = "t_table_iter"

[[example]]
name = "t_columns_index"

[[example]]
name = "t_scalar_record_column"

[[bench]]
name = "taql_bench"
harness = false

[target.'cfg(unix)'.dependencies]
libc = "0.2"
