[package]
name = "casacore-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cross-language test infrastructure (internal)"
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
casacore-aipsio = { path = "../casacore-aipsio" }
casacore-images = { path = "../casacore-images" }
casacore-coordinates = { path = "../casacore-coordinates" }
casacore-lattices = { path = "../casacore-lattices" }
casacore-measures-data = { path = "../casacore-measures-data" }
casacore-tables = { path = "../casacore-tables" }
casacore-types = { path = "../casacore-types" }
ndarray.workspace = true
sofars.workspace = true
tempfile = "3"
thiserror.workspace = true

[build-dependencies]
cc = "1.1"
pkg-config = "0.3"
